@@ -121,7 +121,7 @@ end_define
 
 begin_enum
 enum|enum
-DECL|enum|__anon288e5c1b0103
+DECL|enum|__anon2a16b0c30103
 block|{
 DECL|enumerator|SET_BRUSH
 name|SET_BRUSH
@@ -165,6 +165,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
@@ -1472,7 +1473,7 @@ end_function
 begin_function
 specifier|static
 name|gboolean
-DECL|function|gimp_brush_core_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,GimpCoords * coords,GError ** error)
+DECL|function|gimp_brush_core_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,const GimpCoords * coords,GError ** error)
 name|gimp_brush_core_start
 parameter_list|(
 name|GimpPaintCore
@@ -1487,6 +1488,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
