@@ -128,6 +128,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
@@ -383,7 +384,7 @@ end_function
 begin_function
 specifier|static
 name|gboolean
-DECL|function|gimp_clone_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,GimpCoords * coords,GError ** error)
+DECL|function|gimp_clone_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,const GimpCoords * coords,GError ** error)
 name|gimp_clone_start
 parameter_list|(
 name|GimpPaintCore
@@ -398,6 +399,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
