@@ -126,6 +126,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
@@ -438,7 +439,7 @@ end_function
 begin_function
 specifier|static
 name|gboolean
-DECL|function|gimp_heal_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,GimpCoords * coords,GError ** error)
+DECL|function|gimp_heal_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,const GimpCoords * coords,GError ** error)
 name|gimp_heal_start
 parameter_list|(
 name|GimpPaintCore
@@ -453,6 +454,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
