@@ -186,6 +186,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
@@ -528,7 +529,7 @@ end_function
 begin_function
 specifier|static
 name|gboolean
-DECL|function|gimp_perspective_clone_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,GimpCoords * coords,GError ** error)
+DECL|function|gimp_perspective_clone_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,const GimpCoords * coords,GError ** error)
 name|gimp_perspective_clone_start
 parameter_list|(
 name|GimpPaintCore
@@ -543,6 +544,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
