@@ -95,7 +95,7 @@ end_include
 
 begin_enum
 enum|enum
-DECL|enum|__anon2c480fc00103
+DECL|enum|__anon2b89ae780103
 block|{
 DECL|enumerator|PROP_0
 name|PROP_0
@@ -176,6 +176,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
@@ -719,7 +720,7 @@ end_function
 begin_function
 specifier|static
 name|gboolean
-DECL|function|gimp_source_core_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,GimpCoords * coords,GError ** error)
+DECL|function|gimp_source_core_start (GimpPaintCore * paint_core,GimpDrawable * drawable,GimpPaintOptions * paint_options,const GimpCoords * coords,GError ** error)
 name|gimp_source_core_start
 parameter_list|(
 name|GimpPaintCore
@@ -734,6 +735,7 @@ name|GimpPaintOptions
 modifier|*
 name|paint_options
 parameter_list|,
+specifier|const
 name|GimpCoords
 modifier|*
 name|coords
